[tool.poetry]
name = "streamlit-bybit-fr"
version = "0.1.0"
description = ""
authors = ["MtkN1 <51289448+MtkN1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.4.0"
pandas = "^1.3.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
